src/objects/REVVY__MnQiSubLineAttribute__c.object
<CustomObject>
    <fields>
        <fullName>OCD_AName__c</fullName>
        <formula>REVVY__CatalogAttribute__r.Name</formula>
        <label>AName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Attrib_Value__c</fullName>
        <label>OCD Attrib Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__ActualValue__c</fullName>
        <label>ActualValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__AttributeValue__c</fullName>
        <label>AttributeValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__CatalogAttribute__c</fullName>
        <label>CatalogAttribute</label>
        <referenceTo>REVVY__MnCatalogAttribute__c</referenceTo>
        <relationshipLabel>QiSubLineAttributes</relationshipLabel>
        <relationshipName>QiSubLineAttributes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>REVVY__QuoteItemSubLine__c</fullName>
        <label>QuoteItemSubLine</label>
        <referenceTo>REVVY__MnQuoteItemSubLine__c</referenceTo>
        <relationshipLabel>QiSubLineAttributes</relationshipLabel>
        <relationshipName>QiSubLineAttributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>equipmentName__c</fullName>
        <label>Equipment Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serialNumber__c</fullName>
        <label>Serial Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tradeInValue__c</fullName>
        <label>Trade-In Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>